--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "watch-poll": "npm run watch -- --watch-poll"
   },
   "dependencies": {
+    "laravel-echo": "^1.5.4",
     "material-icons": "^0.2.3",
+    "socket.io-client": "^2.2.0",
     "vue-cool-select": "^1.3.0",
     "vue-flash-message": "^0.7.2",
     "vue-js-modal": "^1.3.26",
