--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-cool-select": "^1.3.0",
     "vue-flash-message": "^0.7.2",
     "vue-js-modal": "^1.3.26",
+    "vue-router": "^3.0.6",
     "vue-smooth-dnd": "^0.2.5",
     "vue-transmit": "^9.0.0-alpha.11",
     "vuedraggable": "^2.21.0",
