--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "vue-cool-select": "^1.3.0",
     "vue-flash-message": "^0.7.2",
     "vue-js-modal": "^1.3.26",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.6",
     "vue-smooth-dnd": "^0.2.5",
     "vue-transmit": "^9.0.0-alpha.11",
     "vuedraggable": "^2.21.0",
+    "vuejs-datepicker": "^1.6.2",
     "vuetify": "^1.3.5"
   },
   "devDependencies": {
