--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch-poll": "npm run watch -- --watch-poll"
   },
   "dependencies": {
+    "es6-promise": "^4.2.8",
     "laravel-echo": "^1.5.4",
     "material-icons": "^0.2.3",
     "socket.io-client": "^2.2.0",
@@ -22,7 +23,8 @@
     "vue-transmit": "^9.0.0-alpha.11",
     "vuedraggable": "^2.21.0",
     "vuejs-datepicker": "^1.6.2",
-    "vuetify": "^1.3.5"
+    "vuetify": "^1.3.5",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "axios": "^0.18.1",
