--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "es6-promise": "^4.2.8",
+    "keen-ui": "^1.1.2",
     "laravel-echo": "^1.5.4",
     "material-icons": "^0.2.3",
     "socket.io-client": "^2.2.0",
     "vue-cool-select": "^1.3.0",
+    "vue-dynamic-select": "^1.0.14",
     "vue-flash-message": "^0.7.2",
     "vue-js-modal": "^1.3.26",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.6",
+    "vue-select": "^3.1.0",
     "vue-smooth-dnd": "^0.2.5",
     "vue-transmit": "^9.0.0-alpha.11",
     "vuedraggable": "^2.21.0",
